[gd_scene load_steps=2 format=2]

[ext_resource path="res://doorControl.gd" type="Script" id=1]

[node name="DoorControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
scroll_offset = Vector2( 0, -25 )

[node name="AddNode" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Add node"

[node name="Run" type="Button" parent="."]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 20.0
text = "Run"

[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="button_down" from="AddNode" to="." method="_on_add_node_button_down"]
[connection signal="button_down" from="Run" to="." method="_on_Run_button_down"]
